--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_createnewitemform.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_createnewitemform.scss
@@ -3,12 +3,11 @@
     height: 100vh;
     padding: 20px;
     position: relative;
-    background-color: rgb(255, 253, 234);
+    background-color: rgb(255, 255, 255);
     font-family: var(--font-display);
 
     & .content {
         height: 77%;
-        background-color: blue;
         display: grid;
         grid-template-columns: 0.35fr 0.65fr;
 
@@ -32,11 +31,8 @@
         & .inputs {
             width: 70%;
             margin: 40px auto 0 auto;
-            // height: 200px;
-            background-color: green;
 
             & .form {
-                background-color: rgba(255, 17, 0, 0.555);
                 padding: 10px;
                 display: grid;
                 grid-template-columns: 1fr 1fr;
@@ -123,17 +119,62 @@
                         position: relative;
                         padding-left: 12px;
                         display: flex;
-                        justify-content: space-evenly;
-                        align-items: center;
-                        background: linear-gradient(to right, blue, red);
+                        // justify-content: space-evenly;
+                        // align-items: center;
                         & .size-box {
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
+                            cursor: pointer;
+                            overflow: hidden;
                             position: relative;
-                            width: 30px;
-                            height: 30px;
-                            background: #12098f;
+                            display: block;
+                            margin: 0 4px;
+                            width: 31px;
+                            height: 31px;
+                            border: solid 1px black;
+                            border-radius: 8px;
+                            & input {
+                                width: 100%;
+                                position: absolute;
+                                height: 100%;
+                                border: none;
+                                outline: none;
+                                opacity: 0;
+
+                                &:checked {
+                                    + label {
+                                        &:after {
+                                            transform: translate(0%, 0%);
+                                        }
+                                    }
+                                }
+                            }
+
+                            & label {
+                                width: 100%;
+                                height: 100%;
+                                display: grid;
+                                place-items: center;
+                                cursor: zoom-in;
+                                position: absolute;
+                                font-size: 1.3rem;
+                                font-weight: 400;
+                                color: black;
+                                font-family: var(--font-display);
+                                &:after {
+                                    content: '';
+                                    display: block;
+                                    position: absolute;
+                                    top: 0;
+                                    left: 0;
+                                    height: 100%;
+                                    width: 100%;
+                                    border: none;
+                                    outline: none;
+                                    z-index: -1;
+                                    transform: translate(-100%, 0%);
+                                    background-color: var(--off-red);
+                                    transition: 300ms ease-in-out;
+                                }
+                            }
                         }
                     }
                 }
