--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_createnewitemform.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_createnewitemform.scss
@@ -1,6 +1,6 @@
 .newitemform {
     width: 100vw;
-    height: 100vh;
+    height: 750px;
     padding: 20px;
     position: relative;
     background-color: rgb(255, 255, 255);
@@ -233,7 +233,6 @@
 
             & .image {
                 cursor: pointer;
-                border-radius: 10px;
                 position: relative;
                 grid-column-start: auto;
                 grid-row-start: auto;
@@ -262,7 +261,6 @@
                 //darkening the image
                 &:after {
                     content: '';
-                    border-radius: 10px;
                     transition: opacity 300ms ease-in-out;
                     position: absolute;
                     width: 100%;
