--- a/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
+++ b/stash/src/components/stashesOverview/stashesOverview-components/StOv-storage/_itemsLayout.scss
@@ -132,14 +132,12 @@
                             width: 25px;
                             height: 25px;
                             margin: 2px 2px;
-
                             font-size: 0.84rem;
                         }
                         @include mq--mobile() {
                             width: 22px;
                             height: 22px;
                             margin: 1px 1px;
-
                             font-size: 0.74rem;
                         }
                         width: 28px;
@@ -150,6 +148,10 @@
                         color: #333;
                         font-weight: 200;
                         font-size: 0.9rem;
+
+                        &.fill {
+                            background-color: var(--off-red);
+                        }
                     }
                 }
 
